添加了第一版的软件分析

--- a/kfcrobot.tex
+++ b/kfcrobot.tex
@@ -1,4 +1,4 @@
-\documentclass[degree=course]{sjtuthesis}
+\documentclass[degree=course, twoside, openright]{sjtuthesis}
 \usepackage{sjtuthesis}
 \usepackage{wrapfig}
 \graphicspath{{figure/}}
@@ -23,7 +23,8 @@
     % TODO:正文
     \input{tex/intro.tex}
     \input{tex/functional_decomposition.tex}
-    % \input{tex/software_analysis.tex}
+    \input{tex/design.tex}
+    \input{tex/software_analysising.tex}
     \input{tex/control.tex}
     \appendix
     % TODO:附录
