添加了第一版的末端执行器设计

--- a/kfcrobot.tex
+++ b/kfcrobot.tex
@@ -24,6 +24,7 @@
     \input{tex/intro.tex}
     \input{tex/functional_decomposition.tex}
     \input{tex/design.tex}
+    \input{tex/adaptive_end_effector.tex}
     \input{tex/software_analysising.tex}
     \input{tex/control.tex}
     \appendix
