--- a/tex/functional_decomposition.tex
+++ b/tex/functional_decomposition.tex
@@ -1,6 +1,6 @@
 % 这里是第二章，主要介绍功能分解和总体设计思路
 % 作者：谭正
-% 上次更新：1.10.20.37
+% 上次更新：1.12.20.37
 
 \chapter{功能分解和总体设计思路}
 
@@ -65,7 +65,8 @@
 设计时需要我们进行选型的机构主要是传动、减速机构，选择的依据如下：
 \begin{enumerate}
     \item   根据从动件的运动轨迹（不与实际设计的机架相干涉）选择末端执行机构；
-    \item   根据市面上方便买到的电机的功率、额定扭矩和我们所大致需要的扭矩选择我们的减速机构。
+    \item   根据市面上方便买到的电机的功率、额定扭矩和我们所大致需要的扭矩选择我们的减速机构；
+    \item   在满足基本要求的前提下，选取较轻、市场上容易买到而且价格便宜的材料。
 \end{enumerate}
 
 
