添加了机械臂设计章节中的第一小节

--- a/kfcrobot.tex
+++ b/kfcrobot.tex
@@ -17,15 +17,14 @@
     \listoftables
     
 
-    \input{tex/nomenclature.tex}
+    % \input{tex/nomenclature.tex}
 
     \mainmatter
     % TODO:正文
     \input{tex/intro.tex}
     \input{tex/functional_decomposition.tex}
     \input{tex/design.tex}
-    \input{tex/adaptive_end_effector.tex}
-    \input{tex/software_analysising.tex}
+    % \input{tex/software_analysising.tex}
     \input{tex/control.tex}
     \appendix
     % TODO:附录
