--- a/tex/design.tex
+++ b/tex/design.tex
@@ -1,10 +1,20 @@
-% 这里是第三章中的第一节，主要介绍机械结构详细设计
+% 这里是第三章中的第一节，主要介绍机械结构详细设计中机械臂的设计
 % 作者：谭正
 % 上次更新：1.10
 
 \chapter{机械结构详细设计}
 
-
 \section{机械臂}
 
-为了实现从货架上抓取汉堡、可乐等并放置到顾客面前，
+% 第一小节，初步计算部分
+\input{tex/rough_calculation.tex}
+
+% 第二小节，材料选择部分
+\input{tex/material_choose.tex}
+\subsection{机构选型}
+
+机械臂部分的机构主要是传动机构，其选择的基本原则是
+
+\subsection{轴的设计和验算}
+
+\input{tex/adaptive_end_effector.tex}
