--- a/tex/functional_decomposition.tex
+++ b/tex/functional_decomposition.tex
@@ -60,7 +60,7 @@
 
 在本装置中，四自由度机械手的是一个位置随动的开环控制系统，各个关节的转动由步进电机就可以驱动，通过发送脉冲可控制其转动到指定角度。因此在这一部分，原动件运动类型为转动（周转、摆动），从动件的运动类型为摆动，所以运动类型不需要要转化；而在本装置的末端执行机构中，需要将原动件的转动转化为夹取运动，采用图\ref{fig:endeffector}所示的五杆机构就可以实现这种转化。
 
-\subsection{机构选型}
+\subsection{机构选型总思路}
 
 设计时需要我们进行选型的机构主要是传动、减速机构，选择的依据如下：
 \begin{enumerate}
