添加了第一版的设计、加工和致谢 并更新了引言部分，增加了竞品对比小节

--- a/bib/thesis.bib
+++ b/bib/thesis.bib
@@ -1,10 +1,11 @@
-@book{Meta_CN,
-  author    = {崔万照 and 马伟 and 邱乐德 and 张洪太},
+@book{MMDM,
+  author    = {秦大同 and 谢里阳},
   location  = {北京},
-  publisher = {国防工业出版社},
-  date      = {2008},
-  title     = {电磁超介质及其应用},
+  publisher = {化学工业出版社},
+  date      = {2019},
+  title     = {现代机械设计手册. 第二卷},
 }
+
 
 @book{JohnD,
   author    = {Joannopoulos, J. D. and Johnson, S. G. and Winn, J. N.},
