--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -1,16 +1,15 @@
-% !TEX root = ../thesis.tex
+% !TEX root = ../fkcrobot.tex
 
 \begin{abstract}
 
-  目前肯德基门店存在高峰期店员收银与取餐任务重叠，操作效率不高,取餐等候时间长的问题。本项目旨在设计出面向肯德基的餐食分装传送装置，即一个五自由度机械臂，为肯德基目前存在的取餐效率不高和一人多职的问题提供一种解决方案。制作出的装置能够在收到信指令后，转动到指定位置夹取汉堡、饮料、薯条，并放置到指定区域。本项目中设计一自适应结构来防止破坏食物完整；并在结构设计上力求降低重量和尺寸。
+  目前肯德基门店存在高峰期店员收银与取餐任务重叠，操作效率不高,取餐等候时间长的问题。本项目旨在设计出面向肯德基的餐食分装传送装置，即一个四自由度机械臂加一自适应机械手，为肯德基目前存在的取餐效率不高和一人多职的问题提供一种模块化、成本低、易于在现有基础上改装的解决方案。制作出的装置能够在收到信指令后，转动到指定位置夹取汉堡、饮料、薯条，并放置到指定区域。本项目中设计一自适应结构来防止破坏食物完整；并在结构设计上力求降低重量和尺寸。
 
   本设计说明书的内容包括引言、功能分解和总体设计思路、机械结构详细设计、模型的加工与装配、电路控制系统、总结与展望、致谢，共八章。本项目通过采访、实地调查确定意义性与可行性；通过理论计算、建模、仿真确定设计方案；通过机械加工与装配制作模型。
  
-  
 \end{abstract}
 
-\begin{enabstract}
-  Currently during rush hours, KFC staff often has to play the role of cashier and food collector at the same time, leading to poor efficiency and long waiting time.This project aims at designing a food-collecting and transferring equipment for KFC,which is a 5 DOF(Degree of Freedom) manipulator,providing a possible solution to KFC's current problems. After receiving signals,the equipment can rotate and move its arms to reach hamburgers,soft drinks or french fries,clamp them,and move them to certain locations. This project involves an adaptive design to protect foods' appearance,and seeks to reduce weight and size.
+% \begin{enabstract}
+%   Currently during rush hours, KFC staff often has to play the role of cashier and food collector at the same time, leading to poor efficiency and long waiting time.This project aims at designing a food-collecting and transferring equipment for KFC,which is a 4 DOF(Degree of Freedom) manipulator with an adaptive hand,providing a modular, low-cost and easily-modified  solution to KFC's current problems. After receiving signals,the equipment can rotate and move its arms to reach hamburgers,soft drinks or french fries,clamp them,and move them to certain locations. This project involves an adaptive design to protect foods' appearance,and seeks to reduce weight and size.
   
-  This design specification contains 8 chapters:introduction,function decomposition and overall design ideas,detailed structure design, physical model making and assembly,circuit control system,summary and prospect, and acknowledgement.This project's significance and feasibility are confirmed by interviews and field visits; final design scheme is based on theoretical calculation, 3D modeling,and simulation;physical model is made through machining and assembly.
-\end{enabstract}
+%   This design specification contains 8 chapters: introduction,function decomposition and overall design ideas,detailed structure design, physical model making and assembly,circuit control system,summary and prospect, and acknowledgement.This project's significance and feasibility are confirmed by interviews and field visits; final design scheme is based on theoretical calculation, 3D modeling,and simulation;physical model is made through machining and assembly.
+% \end{enabstract}
