--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -3,20 +3,18 @@
 %TC:ignore
 
 \begin{acknowledgements}
-  感谢那位最先制作出博士学位论文 \LaTeX 模板的交大物理系同学！
+  汤逸磊：感谢学校提供场地与加工材料，感谢盛鑫军老师和欧阳崛助教的指导与帮助，感谢所有其他帮助过本项目的人们，最后，感谢我的队友：谭正、徐哲、耿梓航、赵启，没有他们的付出，项目无法成功。
 
-  感谢 William Wang 同学对模板移植做出的巨大贡献！
+  徐哲：本次项目的顺利完成要感谢许多老师和同学对我们的帮助和支持，
+  这其中包括助教与课程老师对我们设计上的答疑解惑与宝贵建议，
+  工训的值班老师和助管学长在部分加工换届给出的解决方案和设备支持，
+  许多其它组的成员为我们出谋划策、借用工具，以及一些论坛网友所提供的电控教学和指南。
+  感谢所有给予我们帮助的人们，让我们能够在圆满完成这次项目的同时，积累宝贵的经验。
 
-  感谢 \href{https://github.com/weijianwen}{@weijianwen} 学长一直以来的开发和维
-  护工作！
+  赵启：感谢盛鑫军老师的高质量教学和整个项目从始至终宝贵意见和建议的提出，感谢欧阳崛学长的督促，指导与鼓励，感谢机动学院开设这门对学生理论专业知识和实际动手实践能力都有很大提升的课程，感谢学生创新中心陶波老师对于我们加工的帮助以及中心资源的提供，感谢组员们的互相帮助和学习。
 
-  感谢 \href{https://github.com/sjtug}{@sjtug} 以及
-   \href{https://github.com/dyweb}{@dyweb} 对 0.9.5 之后版本的开发和维护工作！
+  谭正：感谢小组成员们的积极配合，我们项目的成功离不开你们每一个人；感谢盛鑫军老师给我们小组的批评和教诲，我们从中也学到了很多；感谢助教欧阳崛学长对我们项目的点拨和启发，有些细节真的是多亏了学长我们才真正弄清楚。
 
-  感谢所有为模板贡献过代码的同学们, 以及所有测试和使用模板的各位同学！
-
-  感谢 \LaTeX 和 \href{https://github.com/sjtug/SJTUThesis}{\sjtuthesis}，帮我节
-  省了不少时间。
 \end{acknowledgements}
 
 %TC:endignore
