--- a/tex/control.tex
+++ b/tex/control.tex
@@ -81,8 +81,7 @@
         减速比：1:99 \qquad 减速箱长度：28MM \qquad  输出转速：30转/分 \quad  输出扭矩：0.6$N\cdot M$
         \begin{figure}[!htp]
         \centering
-        \includegraphics[height=5cm]{arduino.png}
-        % \includegraphics[height=5cm]{直流电机.png}
+        \includegraphics[height=5cm]{DCmotor.jpg}
         \bicaption[直流有刷电机]{直流有刷电机}{DC brush motor}
         \label{fig:DCmotor}
         \end{figure}
