--- a/tex/design.tex
+++ b/tex/design.tex
@@ -9,12 +9,10 @@
 % 第一小节，初步计算部分
 \input{tex/rough_calculation.tex}
 
-% 第二小节，材料选择部分
-\input{tex/material_choose.tex}
-\subsection{机构选型}
+\input{tex/mechanism_choose.tex}
 
-机械臂部分的机构主要是传动机构，其选择的基本原则是
+\input{tex/design_calculation_shafts.tex}
 
-\subsection{轴的设计和验算}
+\input{tex/finite_element_analysis.tex}
 
 \input{tex/adaptive_end_effector.tex}
