--- a/tex/rough_calculation.tex
+++ b/tex/rough_calculation.tex
@@ -3,6 +3,7 @@
     %  谭正与2020年1月12日11点44分修改
 
     \subsection{粗略计算}
+    \label{subsec:roughCal}
 
     首先我们需要确定好三个臂的长度和扭矩的大致要求。
 
@@ -48,3 +49,6 @@
     选用不同的杆件长度进行计算，可以初步选择杆件长度。当然，老师的建议我们也有听取，选择了那智不二越MZ07六轴机器人的尺寸比例进行参考，
     最终选择了$l_1 = 220, l_2 = 300, l_3 = 280$（单位：毫米）的组合进行设计。
     按照这个组合，根据上述计算方法，我们得到$A,B,C$三个结点克服重力所需要提供的扭矩分别为$50 N\cdot M, 35 N\cdot M, 25 N\cdot M$
+
+    但考虑只用一根铝型材杆件做机械臂不但不利于安装，还可能有较大的挠度，我们最终选取的是方便切割、铣加工的板材作为机械臂的三个臂。
+    这样算下来，实际需要每个结点提供的扭矩可能会超过上述计算，故在设计时，我们以上述计算的两倍来设计减速器。
