--- a/tex/summary.tex
+++ b/tex/summary.tex
@@ -1,32 +1,17 @@
 % !TEX root = ../thesis.tex
 
 \begin{summary}
-这里是全文总结内容。
+    经过我们小组成员的不懈努力，我们的机械臂最终还是能够成功夹取东西并移动到指定位置。
+    就课程设计的完成度而言，我们自认为还是比较高的，在11日的项目展上也不出意外的斩获了“最佳人气奖”。
+    
+    但是从细节上来看，我们的装置还有几点问题：
+    \begin{enumerate}
+        \item   云台直接压在推力球轴承上，因为推力球轴承不能承受径向力的缘故，我们这样设计的云台稍微一点倾覆力都不能承受。如果不把握好重心，稍有不慎就有可能从基座上翻到下来。
+        \item   蜗轮和云台主轴之间的配合不够紧密，键的两个工作面和蜗轮键槽的两个工作面间有较大侧隙。这导致传动时有冲击，而且有些位置不能稳定住。
+        \item   大臂与前臂相连的动力传递形式设计不合理：在悬伸端布置了一个同步带轮。因为同步带轮在工作时会对轴产生一个较大的径向力，从而把轴弄变形。这个地方应当考虑齿轮等依赖周向力传递动力的高副。
+        \item   重心把握不稳妥，手部应该还能减轻很多重量，用亚克力板材做的手臂两板太厚、太重。
+    \end{enumerate}
 
-2015 年 2 月 28 日，中央在北京召开全国精神文明建设工作表彰暨学雷锋志愿服务大会，
-公布全国文明城市（区）、文明村镇、文明单位名单。上海交通大学荣获全国文明单位称
-号。
+    当然技术上这些问题都是可以被修复的，并且被修复之后我们的成本会进一步降低，所以这些缺陷也正是我们的发展空间所在。
 
-全国文明单位这一荣誉是对交大人始终高度重视文明文化工作的肯定，是对交大长期以来文
-明创建工作成绩的褒奖。在学校党委、文明委的领导下，交大坚持将文明创建工作纳入学校
-建设世界一流大学的工作中，全体师生医护员工群策群力、积极开拓，落实国家和上海市有
-关文明创建的各项要求，以改革创新、科学发展为主线，以质量提升为目标，聚焦文明创建
-工作出现的重点和难点，优化文明创建工作机制，传播学校良好形象，提升社会美誉度，显
-著增强学校软实力。2007 至 2012 年间，上海交大连续三届荣获“上海市文明单位”称
-号，成为创建全国文明单位的新起点。
-
-上海交大自启动争创全国文明单位工作以来，凝魂聚气、改革创新，积极培育和践行社会主
-义核心价值观。坚持统筹兼顾、多措并举，将争创全国文明单位与学校各项中心工作紧密结
-合，着力构建学校文明创建新格局，不断提升师生医护员工文明素养，以“冲击世界一流大
-学汇聚强大精神动力”为指导思想，以“聚焦改革、多元推进、以评促建、丰富内涵、彰显
-特色”为工作原则，并由全体校领导群策领衔“党的建设深化、思想教育深入、办学成绩显
-著、大学文化丰富、校园环境优化、社会责任担当”六大板块共 28 项重点突破工作，全面
-展现近年来交大文明创建工作的全貌和成就。
-
-进入新阶段，学校将继续开拓文明创建工作新格局，不断深化工作理念和工作实践，创新工
-作载体、丰富活动内涵、凸显创建成效，积极服务于学校各项中心工作和改革发展的大局
-面，在上级党委、文明委的关心下，在学校党委的直接领导下，与时俱进、开拓创新，为深
-化内涵建设、加快建成世界一流大学、推动国家进步和社会发展而努力奋斗！
-
-上海交通大学医学院附属仁济医院也获得全国文明单位称号。
 \end{summary}
