添加了英文摘要

--- a/kfcrobot.tex
+++ b/kfcrobot.tex
@@ -1,4 +1,4 @@
-\documentclass[degree=course, language=chinese, openright, twoside]{sjtuthesis}
+\documentclass[degree=course, openright, twoside]{sjtuthesis}
 \usepackage{sjtuthesis}
 \usepackage{wrapfig}
 \graphicspath{{figure/}}
