--- a/tex/abstract.tex
+++ b/tex/abstract.tex
@@ -8,8 +8,8 @@
  
 \end{abstract}
 
-% \begin{enabstract}
-%   Currently during rush hours, KFC staff often has to play the role of cashier and food collector at the same time, leading to poor efficiency and long waiting time.This project aims at designing a food-collecting and transferring equipment for KFC,which is a 4 DOF(Degree of Freedom) manipulator with an adaptive hand,providing a modular, low-cost and easily-modified  solution to KFC's current problems. After receiving signals,the equipment can rotate and move its arms to reach hamburgers,soft drinks or french fries,clamp them,and move them to certain locations. This project involves an adaptive design to protect foods' appearance,and seeks to reduce weight and size.
-  
-%   This design specification contains 8 chapters: introduction,function decomposition and overall design ideas,detailed structure design, physical model making and assembly,circuit control system,summary and prospect, and acknowledgement.This project's significance and feasibility are confirmed by interviews and field visits; final design scheme is based on theoretical calculation, 3D modeling,and simulation;physical model is made through machining and assembly.
-% \end{enabstract}
+\begin{enabstract}
+  Currently during rush hours, KFC staff often has to play the role of cashier and food collector at the same time, leading to poor efficiency and long waiting time.This project aims at designing a food-collecting and transferring equipment for KFC,which is a 4 DOF(Degree of Freedom) manipulator with an adaptive hand,providing a modular, low-cost and easily-modified  solution to KFC's current problems. After receiving signals,the equipment can rotate and move its arms to reach hamburgers,soft drinks or french fries,clamp them,and move them to certain locations. This project involves an adaptive design to protect foods' appearance,and seeks to reduce weight and size.
+  /protect //
+  This design specification contains 8 chapters: introduction,function decomposition and overall design ideas,detailed structure design, physical model making and assembly,circuit control system,summary and prospect, and acknowledgement.This project's significance and feasibility are confirmed by interviews and field visits; final design scheme is based on theoretical calculation, 3D modeling,and simulation;physical model is made through machining and assembly.
+\end{enabstract}
