--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -22,7 +22,7 @@
 \begin{figure}[h]
   \centering
   \includegraphics[width=8cm]{figure/intro2.jpg}
-   \bicaption[竞品分析]
+   \bicaption[竞品分析-一种快餐自动打包机]
     {竞品1}{competitor 1}
 \end{figure}
 
@@ -31,15 +31,12 @@
 
 \subsection{(CN105836207) 模块化快餐自动打包机}
 
-
-
-
 该产品通过移动餐盘经过菜品下料口依次下料，针对不同类型的菜品（片状、带状、块状等）采取模块化的下料方式，对于肯德基体积较大的汉堡类食物友好性差，且无法传送饮料。
 
 \begin{figure}[h]
   \centering
   \includegraphics[width=8cm]{figure/intro3.jpg}
-   \bicaption[竞品分析]
+   \bicaption[竞品分析-模块化快餐自动打包机]
     {竞品2}{competitor 2}
 \end{figure}
 
@@ -48,7 +45,7 @@
 \begin{figure}[h]
   \centering
   \includegraphics[width=8cm]{figure/intro4.jpg}
-   \bicaption[竞品分析]
+   \bicaption[竞品分析-自动快餐贩卖机]
     {竞品3}{competitor 3}
 \end{figure}
 
