--- a/tex/info.tex
+++ b/tex/info.tex
@@ -22,7 +22,7 @@
 % \fund{国家 973 项目 (No. 2025CB000000) \\ 国家自然科学基金 (No. 81120250000)}
 \keywords{肯德基，餐食传送，五自由度机械臂，自适应}
 
-\entitle{a design specification\\for the food-collecting and transferring manipulator for KFC}
+\entitle{A Design Specification for the Food-collecting and Transferring Manipulator for KFC}
 \enauthor{Mo Mo}
 \ensupervisor{Prof. Mou Mou}
 % \enassisupervisor{Prof. Uom Uom}
