更新了致谢，改成总的一起说

--- a/tex/acknowledgements.tex
+++ b/tex/acknowledgements.tex
@@ -3,17 +3,20 @@
 %TC:ignore
 
 \begin{acknowledgements}
-  汤逸磊：感谢学校提供场地与加工材料，感谢盛鑫军老师和欧阳崛助教的指导与帮助，感谢所有其他帮助过本项目的人们，最后，感谢我的队友：谭正、徐哲、耿梓航、赵启，没有他们的付出，项目无法成功。
+  % 汤逸磊：感谢学校提供场地与加工材料，感谢盛鑫军老师和欧阳崛助教的指导与帮助，感谢所有其他帮助过本项目的人们，最后，感谢我的队友：谭正、徐哲、耿梓航、赵启，没有他们的付出，项目无法成功。
 
-  徐哲：本次项目的顺利完成要感谢许多老师和同学对我们的帮助和支持，
-  这其中包括助教与课程老师对我们设计上的答疑解惑与宝贵建议，
-  工训的值班老师和助管学长在部分加工换届给出的解决方案和设备支持，
-  许多其它组的成员为我们出谋划策、借用工具，以及一些论坛网友所提供的电控教学和指南。
-  感谢所有给予我们帮助的人们，让我们能够在圆满完成这次项目的同时，积累宝贵的经验。
+  % 徐哲：本次项目的顺利完成要感谢许多老师和同学对我们的帮助和支持，
+  % 这其中包括助教与课程老师对我们设计上的答疑解惑与宝贵建议，
+  % 工训的值班老师和助管学长在部分加工换届给出的解决方案和设备支持，
+  % 许多其它组的成员为我们出谋划策、借用工具，以及一些论坛网友所提供的电控教学和指南。
+  % 感谢所有给予我们帮助的人们，让我们能够在圆满完成这次项目的同时，积累宝贵的经验。
 
-  赵启：感谢盛鑫军老师的高质量教学和整个项目从始至终宝贵意见和建议的提出，感谢欧阳崛学长的督促，指导与鼓励，感谢机动学院开设这门对学生理论专业知识和实际动手实践能力都有很大提升的课程，感谢学生创新中心陶波老师对于我们加工的帮助以及中心资源的提供，感谢组员们的互相帮助和学习。
+  % 赵启：感谢盛鑫军老师的高质量教学和整个项目从始至终宝贵意见和建议的提出，感谢欧阳崛学长的督促，指导与鼓励，感谢机动学院开设这门对学生理论专业知识和实际动手实践能力都有很大提升的课程，感谢学生创新中心陶波老师对于我们加工的帮助以及中心资源的提供，感谢组员们的互相帮助和学习。
 
-  谭正：感谢小组成员们的积极配合，我们项目的成功离不开你们每一个人；感谢盛鑫军老师给我们小组的批评和教诲，我们从中也学到了很多；感谢助教欧阳崛学长对我们项目的点拨和启发，有些细节真的是多亏了学长我们才真正弄清楚。
+  % 谭正：
+  感谢小组成员们的积极配合，我们项目的成功离不开你们每一个人；感谢盛鑫军老师给我们小组的批评和教诲，我们从中也学到了很多；感谢助教欧阳崛学长对我们项目的点拨和启发，没有学长的建议我们要走好多弯路；
+  感谢学校提供场地与加工材料，让我们省下好大一笔钱；
+  感谢机动学院开设这门对学生理论专业知识和实际动手实践能力都有很大提升的课程。
 
 \end{acknowledgements}
 
